--- a/config/project/project.yaml
+++ b/config/project/project.yaml
@@ -1,4 +1,4 @@
-dateModified: 1732202838
+dateModified: 1732264885
 email:
   fromEmail: voornaam.naam@howest.be
   fromName: 'Craft Template'
@@ -34,6 +34,7 @@ plugins:
   mapbox:
     edition: standard
     enabled: true
+    licenseKey: 7BCKRFQ0X7J8JA7VUYD0SGWP
     schemaVersion: 1.1.0
     settings:
       accessToken: null
