--- a/config/project/project.yaml
+++ b/config/project/project.yaml
@@ -1,4 +1,4 @@
-dateModified: 1732264885
+dateModified: 1732267313
 email:
   fromEmail: voornaam.naam@howest.be
   fromName: 'Craft Template'
@@ -16,7 +16,9 @@ meta:
     5d45f9f4-7ab7-4459-926d-a8006cad4227: Images # Images
     10d2260b-dd05-4a49-abb3-800017e15928: 'Craft Template' # Craft Template
     21d6f9ae-1d22-490e-bd89-d6ded5d514ac: 'body text' # body text
+    26e25b36-24e7-4fab-acd8-97d3b9de6632: Carousel # Carousel
     35c35080-108d-485f-925f-407a5ab65a22: Cover # Cover
+    73cf5043-a22d-4cc6-8afa-f92c1a88e0f1: Strengths # Strengths
     955b3b78-0dbd-47ac-9db5-c15151bf0b94: Details # Details
     1094b8b3-5e0b-4264-b997-5e1e4110a127: House # House
     19178fcc-602e-4e2e-a2a4-abf44f2ec6a3: House # House
@@ -26,6 +28,7 @@ meta:
     d3b42bd7-e7fb-4536-8773-1f5957362b49: Price # Price
     e2e222ba-6107-4ebe-ba6f-c26cc3a40dd8: 'Plain Text' # Plain Text
     f6eaef1f-2f88-4856-8eee-c5ae9620f572: 'Craft Template' # Craft Template
+    f5548772-99ba-4fc7-bb8f-83577cd86c34: 'List Item' # List Item
 plugins:
   ckeditor:
     edition: standard
